--- a/fileinput.ui
+++ b/fileinput.ui
@@ -6,9 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>380</width>
-    <height>263</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <pointsize>12</pointsize>
+   </font>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -16,10 +21,10 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>100</y>
-     <width>151</width>
-     <height>41</height>
+     <x>290</x>
+     <y>210</y>
+     <width>211</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
