--- a/manual.ui
+++ b/manual.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>561</width>
-    <height>452</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,23 +16,31 @@
   <widget class="QLabel" name="msg_lable">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>420</y>
-     <width>72</width>
-     <height>15</height>
+     <x>550</x>
+     <y>410</y>
+     <width>201</width>
+     <height>111</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>140</x>
      <y>20</y>
-     <width>401</width>
-     <height>261</height>
+     <width>491</width>
+     <height>321</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -40,6 +48,11 @@
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLabel" name="label">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>课程编号：</string>
         </property>
@@ -54,6 +67,11 @@
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QLabel" name="label_2">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>课程名称：</string>
         </property>
@@ -68,6 +86,11 @@
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QLabel" name="label_3">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>学分：</string>
         </property>
@@ -83,7 +106,7 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>23</width>
+          <width>32</width>
           <height>20</height>
          </size>
         </property>
@@ -98,6 +121,11 @@
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
        <widget class="QLabel" name="label_4">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>周数：</string>
         </property>
@@ -113,7 +141,7 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>23</width>
+          <width>32</width>
           <height>20</height>
          </size>
         </property>
@@ -129,15 +157,20 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>300</y>
-     <width>101</width>
-     <height>101</height>
+     <x>320</x>
+     <y>370</y>
+     <width>141</width>
+     <height>131</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QPushButton" name="record_button">
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>记录本次</string>
       </property>
@@ -145,12 +178,30 @@
     </item>
     <item>
      <widget class="QPushButton" name="submit_button">
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>我已全部填好</string>
       </property>
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QLabel" name="img">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>350</y>
+     <width>161</width>
+     <height>211</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
  </widget>
  <resources/>
