--- a/graphwindow.ui
+++ b/graphwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>290</x>
@@ -45,7 +45,7 @@
          <item>
           <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>请输入学期上限：</string>
+            <string>请输入周数上限：</string>
            </property>
           </widget>
          </item>
@@ -64,6 +64,16 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>150</y>
+      <width>271</width>
+      <height>461</height>
+     </rect>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
